# VIGEN

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
Project_Status/: PLAN.md
Project_Status/docs/: .~lock.VIGEN_Deployment_Infrastructure_v1.docx#  COMPLETED.md  UI_Design_&_Development_Plan.txt  VIGEN_Coding_Standards_v1.docx  VIGEN_Data_Flow_Pipeline_v1.docx  VIGEN_Database_Schema_v1.docx  VIGEN_Deployment_Infrastructure_v1.docx  VIGEN_Dev_Setup_Guide_v1.docx  VIGEN_MASTER_ARCHITECTURE_SPEC_v1.docx  VIGEN_MASTER_ARCHITECTURE_SPEC_v2.docx  VIGEN_PRD_STRATEGIC_v2.md  VIGEN_PRD_v1.docx  (+7 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260314_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  jobs.py  presets.py  uploads.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audio_beat_map.py  common.py  credit_transaction.py  job.py  scene.py  style_preset.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  job.py  pipeline.py  scene.py  storyboard.py  user.py
backend/app/services/: auth.py  bootstrap.py  jobs.py  notifications.py  progress.py  providers.py  storage.py
backend/app/services/providers/: __init__.py  factory.py  mock.py  real.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: .env.local  package-lock.json  package.json
infra/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
(+29 files in other folders)
